--- a/Protokoll/lum.tex
+++ b/Protokoll/lum.tex
@@ -182,7 +182,7 @@ vergleichen:
   \centering
   \includegraphics[width=0.48\textwidth]{../Messung/energtemp.eps}
   \caption{\label{fig:EgapT} Bandlückenenergie in Abhängigkeit der Temperatur, Fitparameter
-  aus Varshniformel: $E_g^0= 2.03 \text{ eV}$, $ \alpha = 4.3*10^{-4} \text{ eV/K}$, \quad $ \beta = 140.2 \text{ K}$}
+  aus Varshniformel: $E_g^0= 2.03 \text{ eV}$, $\alpha = 4.3*10^{-4}\text{ eV/K}$, $\beta = 140.2 \text{ K}$}
 \end{figure}
 
 \noindent Die Größenordnung und Richtung der Wellenlängenverschiebung deckt sich mit der Erwartung aus (\ref{eq:evVersch}).
@@ -209,7 +209,7 @@ ein korrigierter Wert für die Zusammensetzung errechnen. Wir erhalten $x_{korr}
   \includegraphics[width=0.48\textwidth]{../Messung/integrintenstempfit.eps}
   \caption{\label{fig:intInt}Integrierte Intensitäten der Lumineszenzpeaks in Abhängigkeit
   der Temperatur,
-  Fitparameter aus Arrheniusgleichung: $I_0=450074$,$c=25.2$,$E_A=33.4\text{ meV}$}
+  Fitparameter aus Arrheniusgleichung: $I_0=450074$, $c=25.2$, $E_A=33.4\text{ meV}$}
 \end{figure}
 
 \noindent Die Abnahme der Lumineszenzintensität bei steigenden Temperaturen lässt sich mit der Fermi-Dirac-Verteilung
@@ -231,7 +231,7 @@ Peakintensitäten in Abhängigkeit von der Temperatur fitten und somit Rückschl
 \noindent Diese beschreibt die notwendige Energie eines Ladungsträgers im Donator-/Akzeptorniveau, um ins nächstgelegene Band
 (Leitungs-/Valenzband) angeregt zu werden, um dann strahlend, über Phononen oder andere nicht-strahlende Prozesse zu relaxieren.
 In Abb. \ref{fig:intInt} ist dieser Fit dargestellt. Wir erhalten eine Aktivierungsenergie von $E_A=33 \text{ meV}$, welche im erwarteten
-Referenzbereich von $E_A=10-50\text{ meV}$ (für Ga$_{0.52}$In$_{0,48}$P) \cite{eact} liegt.
+Referenzbereich von $E_A=(10-50)\text{ meV}$ (für Ga$_{0.52}$In$_{0,48}$P) \cite{eact} liegt.
 
 In Abb. \ref{fig:maxInt} sind die maximalen Intensitäten über die Temperatur aufgetragen. Deutlich ist wieder
 der (stärker als lineare) Abfall der Lumineszenz-Intensität bei steigenden Temperaturen. Wie bereits in Abschnitt III.2 erläutert,
