--- a/Protokoll/lum.tex
+++ b/Protokoll/lum.tex
@@ -14,13 +14,13 @@ nofootinbib,superscriptaddress]{revtex4-1}
 
 % Titelseite
 \begin{document}
-\title{F-Praktikum: Elektrolumineszenz-Spektroskopie}
+\title{F-Praktikum: Phasendiagramme}
 \author         {Ch. Egerland}
 \email[Email: ]{egerlanc@physik.hu-berlin.de}
 \author         {M. Pfeifer}
-\email[Email: ]{mpfeifer@physik.hu-berlin.de}
+\email[Email: ]{max.pfeifer@physik.hu-berlin.de}
 \affiliation    {Humboldt-Universität zu Berlin, Institut für Physik}
-\date[Versuchsdatum: ]{06.07.2017}
+\date[Versuchsdatum: ]{05.09.2017}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
