--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -24,11 +24,9 @@ nofootinbib,superscriptaddress]{revtex4-1}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-Untersucht wird das Lumineszenzspektrum einer InGaP/GaAs-Photodiode im Temperaturbereich zwischen
-$80\text{ K}$ und $255\text{ K}$. Die Fluoreszenzmessung wird mithilfe eines Czerny-Turner-Spektrometers
-und einer Photomultiplier-Tube realisiert. Wir treffen Aussagen über den Verlauf des Spektrums, die
-Temperaturabhängigkeit des Lumineszenzpeaks, den thermischen Einluss auf die integrierte Peakintensität und
-wir geben eine Abschätzung für die Aktivierungsenergie zur Lumineszenz von InGaP an.
+Gegenstand dieses Versuches ist die Untersuchung des Temperaturverhaltens von $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und
+$\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ mittels Differentialthermoanalyse zur näherungsweisen Bestimmung der Schmelzwärmen sowie Schmelztemperaturen.
+Abschließend wird versucht, die genannten Verbindungen anhand der Systematik der Mischbarkeit von Phasen zu klassifizieren.   
 \end{abstract}
 
 
