--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -26,7 +26,7 @@ nofootinbib,superscriptaddress]{revtex4-1}
 \begin{abstract}
 Gegenstand dieses Versuches ist die Untersuchung des Temperaturverhaltens von $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und
 $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ mittels Differentialthermoanalyse zur näherungsweisen Bestimmung der Schmelzwärmen sowie Schmelztemperaturen.
-Abschließend wird versucht, die genannten Verbindungen anhand der Systematik der Mischbarkeit von Phasen zu klassifizieren.   
+Abschließend wird versucht, die genannten Verbindungen in die Systematik der Mischbarkeit von Phasen einzuordnen.
 \end{abstract}
 
 
@@ -76,7 +76,8 @@ Die Permittivität der InGaP/GaAs-Heterostruktur wurde als $\epsilon=11.75\epsil
 
 \noindent Der Versuchsaufbau ist schematisch in Abbildung \ref{fig:versuch} dargestellt. Die Anregung der Diode erfolgt durch Anlegen einer
 Spannung mittels einer externen Versorgung, die einen konstanten Strom von $I=30\text{$\mu$A}$ liefert. Dazu sind die elektrischen Verbindungen bereits an der Probe angebracht.
-Diese befindet sich in einem evakuierten ($p\sim 2\text{ Pa}$) und auf $80\text{ K}$ Stickstoff-temperierten Kryostaten. Die Temperaturmessung
+Diese befindet sich in einem evakuierten ($p\sim 2\text{ Pa}$) und auf $80\text{ K}$ Stickstoff-temperierten Kryostaten. Die Temperaturmessung erfolgt an der unteren Seite der
+Solidus. Sowohl Liquidus als auch Solidus sind gebogen.
 erfolgt durch einen Sensor, der möglichst nahe an der Probe platziert wurde.
 
 \begin{figure}[h]
@@ -87,12 +88,7 @@ erfolgt durch einen Sensor, der möglichst nahe an der Probe platziert wurde.
 \end{figure}
 
 \noindent Die durch Rekombination entstandenen Photonen gelangen zunächst durch eine Kollimatorlinse, gefolgt von einer Linse zur
-Strahlfokussierung und treffen dann auf ein Czerny-Turner-Monochromator. Durch die Beweglichkeit des Gitters im
-Monochromator (Schrittmotorsteuerung) können verschiedene Spektralbereiche selektiert werden, deren Intensität anschließend in einem Photomultiplier (PMT)
-gemessen wird. Dieser arbeitet mit einer Beschleunigungsspannung von $U_\text{PMT}=2,2\text{ kV}$. Zwecks Maximierung des
-Signal-Rausch-Verhältnisses wurde die PMT ebenfalls gekühlt (Peltierelement mit Wasserkühlung). Das Signal der Photonenvervielfachers
-gelangt dann über einen Analog-Digital-Wandler zum Computer, der die Messsignale zusammen mit der Schrittmotorposition des Monochromators
-abspeichert und zu einem Energiespektrum verarbeitet.
+Strahlfokussierung und treffen dann auf ein Czerny-Turner-Monochromator. Durch die Beweglichkeit des Gitters im Monochromator wird
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -256,14 +252,11 @@ zu einer systematischen Abweichung der Bandlücke führen würde.
 \bibliography{sample-paper}
 \bibliographystyle{prsty}
 \begin{thebibliography}{99}
-\bibitem{saarland}Prof. Dr. Thomas Wichert, Photolumineszenz-Spektroskopie an Halbleitern, Universität des Saarlandes [2006]
-\bibitem{anleitung}FET Group, Benutzerhandbuch Elektrolumineszenz-Spektroskopie, Humboldt-Universität zu Berlin
-\bibitem{vorbereitung}FET Group, Fragen zur Vorbereitung, S.1-3, Humboldt-Universität zu Berlin
-\bibitem{kittel}Ch. Kittel, Einführung in die Festkörperphysik, S.159f., 12. Auflage, Oldenbourg Verlag [1999]
-\bibitem{phonons}C. Besikci and M. Razeghi, Electron Transport Properties of Ga$_{0.51}$In$_{0.49}$P for Device Applications, IEEE Trans.Electron Devices, vol. 41, no. 6, pp. 1066-1069 [1994]
-\bibitem{dielek}S. Adachi, Material Parameters of In$_{1-x}$Ga$_x$As$_y$P$_{1-y}$ and Related Binaries, J.Appl.Phys., vol. 53, no. 12, pp. 8775-8792 [1982]
-\bibitem{max}Woo Sik Yooa, Kitaek Kanga, Gota Muraib and Masahiro Yoshimotob, Temperature Dependence of Photoluminescence Spectra from Crystalline Silicon, Kyoto Institute of Technology [2015]
-\bibitem{eact}J. D. Lambkin, L. Considine, and S. Walsh, Temperature dependence of the photoluminescence intensity of ordered and disordered In$_{0,48}$Ga$_{0.52}$P, Appl. Phys. Lett. 65, 73 [1994]
+\bibitem{meltpAl2O3}Lide, David R., CRC Handbook of Chemistry and Physics, 83rd ed.; CRC Press: Boca Raton, FL, p 4-39 [2002]
+\bibitem{meltpDyScO3}Crnogorac, H. Wilke, Measurement of physical properties of DyScO3 melt, Vol. 44, I 6 [2009]
+\bibitem{meltpDyGdScO3}B. Velickov, V. Kahlenberg, R. Bertram, M. Bernhagen, Z. Kristallogr. 222, p 466-473 [2007]
+\bibitem{schmelzwAl2O3}Zhang, P.H., Chang, R.Z., Wei, Z. et al. Int J Thermophys 7: 811. https://doi.org/10.1007/BF00503838 [1986]
+\bibitem{schmelzwAl2O3_2}Dale L. Perry, Sidney L. Phillips, Inorganic Compounds, CRC Press, p 10 [1995]
 \end{thebibliography}
 
 
