--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -37,29 +37,9 @@ Abschließend wird versucht, die genannten Verbindungen in die Systematik der Mi
 
 \section{Theorie}
 
-\noindent Unter Lumineszenz versteht man Strahlung, die beim Übergang eines Systems von einem angeregten Zustand
-in einen niederenergetischen Zustand emittiert wird. Bei Halbleitern lassen sich diese Übergänge mit dem Bändermodell
-beschreiben. So finden die elektronischen Übergänge vor allem aus dem Leitungsband ins Valenzband statt, so dass bei
-Anregung des Materials mit ausreichend Energie ($E>E_g$) Lumineszenzphotonen mit einer der Bandlücke entsprechenden
-Frequenz erzeugt werden (direkter Übergang).\newline
-
-\noindent Es gibt verschiedene Rekombinationswege für ein sich im angeregten Zustand befindlichendes System (s. Abb. \ref{fig:rekomb} ) \cite{saarland}.
-Liegt ein dotierter Halbleiter vor, speziell z.B. eine Heterostruktur mit pn-Übergang, gibt es im Bereich zwischen Leitungs-
-und Valenzband Donator- (knapp unter Leitungsbandkante) und Akzeptorzustände (knapp über der Valenzbandkante). Ebenfalls für die
-Lumineszenz relevant sind sog. Exzitonen-Zustände (gebundene Elektron-Loch-Paare). Bei guter Kühlung (wenig thermischer
-Anregung) sind neben dem direkten Übergang (LB$\rightarrow$VB) daher auch andere Übergänge, z.B. Exzitonen-Rekombination,
-Übergänge vom Donator- zum Akzeptorniveau (D,A) oder ins Valenzband (D,h) sichtbar. Im Falle von InGaP lässt sich die exzitonische
-Bindungsenergie mit den effektiven Elektron-/Lochmassen, gegeben in \cite{anleitung}, in der Wasserstoffnäherung berechnen:
-\begin{eqnarray}
-  E_{n} = \frac{\mu\cdot e^4}{32\pi^2\hbar^2\epsilon^2\epsilon_0^2}\cdot\frac{1}{n^2}
-  \\[6pt]
-  \nonumber
-  E_{n}<E_{1} = 7\text{ meV}\;\;\;\;\,\,\,
-  \label{eq:exitEbind}
-\end{eqnarray}
-
-\noindent Dabei bezeichnet $\mu=\left(\frac{1}{{m_e}^*} +\frac{1}{{m_h}^*}\right)^{-1}$ die reduzierte Masse des Exzitons.
-Die Permittivität der InGaP/GaAs-Heterostruktur wurde als $\epsilon=11.75\epsilon_0$ angenommen \cite{dielek}.
+\noindent Test
+ 
+Complex Peaks Extrapolation Tangenten an DTA Kurve
 
 \begin{figure}[h]
   \centering
