--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -9,6 +9,7 @@ nofootinbib,superscriptaddress]{revtex4-1}
 \usepackage{bm}             % special 'bold-math' package
 \usepackage[ngerman]{babel} % deutsche Siblentrennung
 \usepackage[utf8]{inputenc} % Umlaute
+\usepackage{chemformula}    % für chemische Schreibweise
 
 \def\andname{\hspace*{-0.5em},} % definiert die Trennung zwischen 2 Autoren neu
 
@@ -37,17 +38,20 @@ Abschließend wird versucht, die genannten Verbindungen in die Systematik der Mi
 
 \section{Theorie}
 
-\noindent Test
- 
-Complex Peaks Extrapolation Tangenten an DTA Kurve
+\noindent Mischkristalle aus Skandat ($\text{ScO}_3$) und einem seltenen Erdelement (RE), im Folgenden als $\text{REScO}_3$ bzw. RE-Skandate bezeichnet,
+finden heutzutage häufig Anwendung bei der Herstellung dünner Perowskit-Filme. Ursache hierfür ist neben der speziellen Kristallstruktur und dem relativ
+anspruchslosen Wachstumsprozess v.a., dass nur $\text{REScO}_3$-Mischkristalle Gitterparameter im Bereich zwischen 3.95 \AA$\text{ und}$ 4.02 \AA$\text{ aufweisen.}$
+Dabei fällt der Gitterparameter benachbarter $\text{REScO}_3$-Verbindungen mit steigender Ordnungszahl näherungsweise in 0.01 \AA-Schritten.
 
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=0.47\textwidth]{img/rekombinationswege.jpg}
-  \caption{ Lumineszenz-relevante elektronische Übergänge: a) Anregung, b) Relaxation im Band,
-  c) (e,h)-Übergang, d) (D,h)-Übergang, e) (e,A)-Übergang, f) (D,A)-Übergang, g) Rekombination freier Exzitonen; aus: \cite{saarland}}
-  \label{fig:rekomb}
-\end{figure}
+Jedoch sind nicht alle seltenen Erden als Bestandteil von $\text{REScO}_3$-Mischkristallen geeignet ($\text{PmScO}_3$ radioaktiv, $\text{EuScO}_3$ instabil bei Kontakt mit Si).
+Außerdem kristallisieren nicht alle RE-Skandate in der Perowskit-Struktur. Nach \cite{perowskHoPr} kann jedoch davon ausgegangen werden, dass solche $\text{REScO}_3$ mit
+$\text{RE}=\ch{_{57}Pr}$ bis $\ch{_{67}Ho}$ isomorph sind. Im Gegensatz zur idealerweise kubischen Perowskitstruktur, besitzen diese eine orthorhombische Kristallstruktur.
+
+Um die als Kristallbestandteil ungeeigneten Lanthanoide zu ersetzen, werden Mischkristalle aus jeweils benachbarten RE-Skandaten gezüchtet, so z.B. $\text{Sm}_x\text{Gd}_{1-x}\text{ScO}_3$
+für $\text{EuScO}_3$ oder $\text{Nd}_x\text{Sm}_{1-x}\text{ScO}_3$ für $\text{PmScO}_3$ [QUELLE PAPER MESSDATEN]. Werden Mischkristalle gezüchtet, die neben $\text{ScO}_3$ zwei direkt benachbarte
+seltene Erdelemente enthalten ($\text{RE1RE2ScO}_3$) ist eine gezieltere Feinabstimmung gewünschter Film-Eigenschaften (z.B. Anpassung Gitterparameter in der Größenordnung von
+0.002 \AA$\text{ statt }$ 0.01 \AA$\text{ mit}$ reinen RE-Skandaten) möglich. Dazu werden in diesem Versuch die Verbindungen $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$
+und $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ untersucht.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -237,6 +241,7 @@ zu einer systematischen Abweichung der Bandlücke führen würde.
 \bibitem{meltpDyGdScO3}B. Velickov, V. Kahlenberg, R. Bertram, M. Bernhagen, Z. Kristallogr. 222, p 466-473 [2007]
 \bibitem{schmelzwAl2O3}Zhang, P.H., Chang, R.Z., Wei, Z. et al. Int J Thermophys 7: 811. https://doi.org/10.1007/BF00503838 [1986]
 \bibitem{schmelzwAl2O3_2}Dale L. Perry, Sidney L. Phillips, Inorganic Compounds, CRC Press, p 10 [1995]
+\bibitem{perowskHoPr}V.M. Goldschmidt, Naturwissenschaften 14, 477 [1926]
 \end{thebibliography}
 
 
