--- a/Protokoll/phasendiagramme.tex
+++ b/Protokoll/phasendiagramme.tex
@@ -15,19 +15,23 @@ nofootinbib,superscriptaddress]{revtex4-1}
 
 % Titelseite
 \begin{document}
-\title{F-Praktikum: Phasendiagramme}
+\title{F-Praktikum (Phasendiagramme):\\Differentialthermoanalyse von $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$
+und $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$\\im Bereich zwischen 300 K und 2300 K}
 \author         {Ch. Egerland}
 \email[Email: ]{egerlanc@physik.hu-berlin.de}
 \author         {M. Pfeifer}
 \email[Email: ]{max.pfeifer@physik.hu-berlin.de}
 \affiliation    {Humboldt-Universität zu Berlin, Institut für Physik}
 \date[Versuchsdatum: ]{05.09.2017}
+\date[Versuchsort: ]{Institut für Kristallzüchtung}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-Gegenstand dieses Versuches ist die Untersuchung des Temperaturverhaltens von $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und
+Gegenstand dieses Versuches ist die Untersuchung des Temperaturverhaltens der Mischkristalle $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$ und
 $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ mittels Differentialthermoanalyse zur näherungsweisen Bestimmung der Schmelzwärmen sowie Schmelztemperaturen.
-Abschließend wird versucht, die genannten Verbindungen in die Systematik der Mischbarkeit von Phasen einzuordnen.
+Die genannten Verbindungen, auch als RE-Skandate ($\text{REScO}_3$, RE=seltene Erde) bezeichnet, werden anschließend in die Systematik der Mischbarkeit von Phasen eingeordnet.
+Basierend auf Referenzdaten zu $\text{Gd}\text{ScO}_3$ und $\text{Dy}\text{ScO}_3$ aus [PAPER ALS QUELLE] werden die Schmelzwärmen dieser reinen RE-Skandate mit denen der hier
+untersuchten Mischkristalle verglichen.
 \end{abstract}
 
 
@@ -37,11 +41,11 @@ Abschließend wird versucht, die genannten Verbindungen in die Systematik der Mi
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Theorie}
-
+\subsection{Eigenschaften und Struktur von $\text{RESCo}_3$}
 \noindent Mischkristalle aus Skandat ($\text{ScO}_3$) und einem seltenen Erdelement (RE), im Folgenden als $\text{REScO}_3$ bzw. RE-Skandate bezeichnet,
 finden heutzutage häufig Anwendung bei der Herstellung dünner Perowskit-Filme. Ursache hierfür ist neben der speziellen Kristallstruktur und dem relativ
 anspruchslosen Wachstumsprozess v.a., dass nur $\text{REScO}_3$-Mischkristalle Gitterparameter im Bereich zwischen 3.95 \AA$\text{ und}$ 4.02 \AA$\text{ aufweisen.}$
-Dabei fällt der Gitterparameter benachbarter $\text{REScO}_3$-Verbindungen mit steigender Ordnungszahl näherungsweise in 0.01 \AA-Schritten.
+Dabei fällt der Gitterparameter benachbarter $\text{REScO}_3$-Verbindungen mit steigender Ordnungszahl näherungsweise in 0.01 \AA-Schritten. [QUELLE PAPER]
 
 Jedoch sind nicht alle seltenen Erden als Bestandteil von $\text{REScO}_3$-Mischkristallen geeignet ($\text{PmScO}_3$ radioaktiv, $\text{EuScO}_3$ instabil bei Kontakt mit Si).
 Außerdem kristallisieren nicht alle RE-Skandate in der Perowskit-Struktur. Nach \cite{perowskHoPr} kann jedoch davon ausgegangen werden, dass solche $\text{REScO}_3$ mit
@@ -51,18 +55,26 @@ Um die als Kristallbestandteil ungeeigneten Lanthanoide zu ersetzen, werden Misc
 für $\text{EuScO}_3$ oder $\text{Nd}_x\text{Sm}_{1-x}\text{ScO}_3$ für $\text{PmScO}_3$ [QUELLE PAPER MESSDATEN]. Werden Mischkristalle gezüchtet, die neben $\text{ScO}_3$ zwei direkt benachbarte
 seltene Erdelemente enthalten ($\text{RE1RE2ScO}_3$) ist eine gezieltere Feinabstimmung gewünschter Film-Eigenschaften (z.B. Anpassung Gitterparameter in der Größenordnung von
 0.002 \AA$\text{ statt }$ 0.01 \AA$\text{ mit}$ reinen RE-Skandaten) möglich. Dazu werden in diesem Versuch die Verbindungen $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$
-und $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ untersucht.
+und $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ mittels Differentialthermoanalyse untersucht.
 
+\subsection{Differentialthermoanalyse}
+\noindent Die Differentialthermoanalyse ist ein thermisches Untersuchungsverfahren zur Materialanalyse. Dabei befindet sich innerhalb eines evakuierten Ofens ein hochtemperaturbeständiger Tiegelhalter
+mit zwei symmetrischen Wolfram-Schmelztiegeln: ein Probentiegel mit der zu untersuchenden Substanz und ein leerer (oder mit einer inerten Substanz gefüllten) Referenztiegel. An jedem Probentiegel ist,
+wie in Abb. X zu erkennen, jeweils ein Thermoelement aus Wolfram und Rhenium (Schmelzpunkte 3.422 °C und 3.186 °C) angebracht. Wird der Ofen geheizt und dadurch insbesondere eine Temperaturdifferenz an
+der Kontaktstelle zwischen W und Re geschaffen, entsteht aufgrund des Seebeck-Effektes eine zur Temperatur proportionale Spannung zwischen den Drahtenden. Findet im Probentiegel nun ein Phasenübergang statt,
+der Umwandlungswärme benötigt (1. Art), so steigt die Temperatur dort langsamer an als am Referenztiegel. Durch Reihenschaltung beider
+Thermoelemente kann diese Differenzspannung/-temperatur direkt gemessen werden. Nimmt man zusätzlich die absolute Temperatur am Referenztiegel auf, können materialspezifische Eigenschaften der Probensubstanz,
+wie Schmeltemperatur und -wärme (Peakfläche) bestimmt werden.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Experiment}
+\noindent Untersucht werden 62,85 mg $\text{Dy}_{0.5}\text{Tb}_{0.5}\text{ScO}_3$ und 72,75 mg $\text{Tb}_{0.5}\text{Gd}_{0.5}\text{ScO}_3$, wobei jeweils einmal im Temperaturbereich zwischen 24 °C und 2050 °C
+und ein weiteres mal im Bereich zwischen 500 °C und 2050 °C Werte für die Differenzspannung aufgenommen werden. Zur Kalibrierung wurde eine weitere DTA mit $\text{Al}_2\text{O}_3$
+durchgeführt, da die Schmelztemperatur von Aluminiumoxid sehr gut bekannt ist. Damit keine Oxidation der Proben stattfindet, finden alle Messungen unter He-Atmosphäre statt.
+Die DTA-Messaparatur STA 429 von der Firma NETZSCH wird von einer Steuerungssoftware.. Die Heizrate beträgt 15 K/min.
 
-\noindent Der Versuchsaufbau ist schematisch in Abbildung \ref{fig:versuch} dargestellt. Die Anregung der Diode erfolgt durch Anlegen einer
-Spannung mittels einer externen Versorgung, die einen konstanten Strom von $I=30\text{$\mu$A}$ liefert. Dazu sind die elektrischen Verbindungen bereits an der Probe angebracht.
-Diese befindet sich in einem evakuierten ($p\sim 2\text{ Pa}$) und auf $80\text{ K}$ Stickstoff-temperierten Kryostaten. Die Temperaturmessung erfolgt an der unteren Seite der
-Solidus. Sowohl Liquidus als auch Solidus sind gebogen.
-erfolgt durch einen Sensor, der möglichst nahe an der Probe platziert wurde.
+
 
 \begin{figure}[h]
   \centering
